# Aether

./: .env.example  Cargo.toml  Dockerfile.app  Dockerfile.app.local  Makefile  README.md  deploy.sh  dev.sh  docker-compose.build.yml  docker-compose.solo.yml  docker-compose.sqlite.yml  docker-compose.yml  generate_keys.sh  install.sh  package-lock.json
apps/aether-gateway/: Cargo.toml
apps/aether-gateway/src/: admin_api.rs  ai_pipeline_api.rs  client_session_affinity.rs  constants.rs  error.rs  fallback_metrics.rs  frontdoor_loop_guard.rs  headers.rs  lib.rs  main.rs  provider_key_auth.rs  provider_pool_demand.rs  rate_limit.rs  request_candidate_runtime.rs  roles.rs  router.rs  test_support.rs
apps/aether-gateway/src/ai_pipeline/: mod.rs
apps/aether-gateway/src/ai_pipeline/adaptation/: mod.rs  private_envelope.rs  surfaces.rs
apps/aether-gateway/src/ai_pipeline/contracts/: control_payloads.rs  mod.rs
apps/aether-gateway/src/ai_pipeline/conversion/: error.rs  mod.rs  registry.rs
apps/aether-gateway/src/ai_pipeline/finalize/: common.rs  mod.rs  sse.rs  tests_stream.rs  tests_sync.rs
apps/aether-gateway/src/ai_pipeline/planner/: candidate_affinity.rs  candidate_eligibility.rs  candidate_metadata.rs  common.rs  mod.rs  plan_builders.rs  report_context.rs  route.rs  spec_metadata.rs
apps/aether-gateway/src/ai_pipeline/pure/: mod.rs
apps/aether-gateway/src/ai_pipeline/runtime/: mod.rs  provider_types.rs
apps/aether-gateway/src/ai_serving/: api.rs  mod.rs  transport.rs
apps/aether-gateway/src/ai_serving/adaptation/: mod.rs  (+1 more)
apps/aether-gateway/src/api/: core.rs  ops.rs  response.rs
apps/aether-gateway/src/async_task/: http.rs  mod.rs  query.rs  runtime.rs
apps/aether-gateway/src/audit/: admin.rs  http.rs  mod.rs  shadow.rs
apps/aether-gateway/src/cache/: auth_api_key_last_used.rs  auth_context.rs  direct_plan_bypass.rs  mod.rs  scheduler_affinity.rs  system_config.rs
apps/aether-gateway/src/control/: execute.rs  management_token_permissions.rs  mod.rs  public.rs
apps/aether-gateway/src/data/: auth.rs  candidate_selection.rs  candidates.rs  config.rs  decision_trace.rs  mod.rs  tests.rs
apps/aether-gateway/src/dispatch/: pool_scheduler.rs
apps/aether-gateway/src/execution_runtime/: fallback.rs  kiro_web_search.rs  mod.rs  ndjson.rs  remote_compat.rs  response_header_rules.rs  server.rs  stream_pump.rs  submission.rs  tests.rs  transport.rs
apps/aether-gateway/src/executor/: candidate_loop.rs  diagnostics.rs  orchestration.rs  outcome.rs  plan_fallback.rs  policy.rs  reports.rs  stream_path.rs  sync_path.rs
apps/aether-gateway/src/handlers/: mod.rs
apps/aether-gateway/src/hooks/: audit.rs
apps/aether-gateway/src/intent/: mod.rs  plan_fallback.rs  policy.rs  remote.rs  stream_path.rs  sync_path.rs
apps/aether-gateway/src/maintenance/: mod.rs  runtime.rs  tests.rs
apps/aether-gateway/src/middleware/: access_log.rs  mod.rs  strip_cf_headers.rs
apps/aether-gateway/src/model_fetch/: mod.rs  runtime.rs  tests.rs
apps/aether-gateway/src/oauth/: http_executor.rs  identity_repo.rs
apps/aether-gateway/src/orchestration/: adaptive.rs  attempt.rs  classifier.rs  effects.rs  health.rs  mod.rs  recovery.rs
apps/aether-gateway/src/privacy/: mod.rs
apps/aether-gateway/src/query/: mod.rs
apps/aether-gateway/src/scheduler/: affinity.rs  health.rs  mod.rs  request_candidate_state.rs  request_candidates.rs  route.rs
apps/aether-gateway/src/state/: admin_types.rs  app.rs  bootstrap_admin.rs  cache.rs  catalog.rs  core.rs  cors.rs  integrations.rs  mod.rs  oauth.rs  testing.rs  types.rs  video.rs
apps/aether-gateway/src/task_runtime/: mod.rs
apps/aether-gateway/src/tests/: architecture.rs  async_task.rs  audit.rs  concurrency.rs  frontdoor.rs  mod.rs  proxy.rs  usage.rs
apps/aether-gateway/src/tunnel/: mod.rs
apps/aether-gateway/src/usage/: config.rs  event.rs  http.rs  mod.rs  queue.rs  runtime.rs  worker.rs  write.rs
apps/aether-gateway/src/video_tasks/: helpers.rs  mod.rs  service.rs  store.rs  types.rs
apps/aether-gateway/src/wallet_runtime/: access.rs  mod.rs  quota.rs
crates/aether-ai-surfaces/: Cargo.toml
crates/aether-ai-surfaces/src/: api.rs  lib.rs
crates/aether-ai-surfaces/src/adaptation/: kiro_stream.rs  mod.rs  private_envelope.rs
crates/aether-ai-surfaces/src/contracts/: control_payloads.rs  mod.rs
crates/aether-ai-surfaces/src/finalize/: common.rs  mod.rs  openai_image_stream.rs  sse.rs  stream_rewrite.rs  sync_products.rs  sync_to_stream.rs
crates/aether-ai-surfaces/src/planner/: matrix.rs  route.rs
crates/aether-billing/: Cargo.toml
crates/aether-billing/src/: event_enrichment.rs  formula_engine.rs  lib.rs  models.rs  pricing.rs  token_normalization.rs
crates/aether-gateway/: Cargo.toml
crates/aether-gateway/src/: constants.rs  control.rs  executor.rs  gateway.rs  handlers.rs  headers.rs  kiro_stream.rs  lib.rs  local_finalize.rs  local_stream.rs  main.rs  video_tasks.rs
crates/aether-gateway/src/executor/: plan_builders.rs  stream.rs  submission.rs  sync.rs  tests.rs
crates/aether-gateway/src/kiro_stream/: decoder.rs  state.rs  tests.rs  util.rs
crates/aether-gateway/src/local_finalize/: chat.rs  cli.rs  common.rs  tests.rs
crates/aether-gateway/src/local_stream/: chat.rs  cli.rs  common.rs  envelope.rs  tests.rs
crates/aether-model-fetch/: Cargo.toml
crates/aether-model-fetch/src/: association_sync.rs  config.rs  lib.rs  logic.rs  strategy.rs  transport.rs
crates/aether-pool-core/: Cargo.toml
crates/aether-pool-core/src/: lib.rs  scheduler.rs
crates/aether-scheduler-core/: Cargo.toml
crates/aether-scheduler-core/src/: affinity.rs  auth.rs  candidate.rs  health.rs  lib.rs  model.rs  provider.rs  request_candidate.rs
crates/aether-scheduler-core/src/candidate/: mod.rs  selectability.rs
crates/aether-video-tasks-core/: Cargo.toml
crates/aether-video-tasks-core/src/: body.rs  follow_up.rs  gemini.rs  lib.rs  openai.rs  path.rs  read_side.rs  service.rs  snapshot.rs  store.rs  store_backend.rs  store_registry.rs  sync.rs  transport.rs  transport_domain.rs  types.rs  util.rs
(+1464 files in other folders)
