[workspace]
members = [
    "aether-hub",
    "aether-proxy",
    "crates/aether-contracts",
    "crates/aether-executor",
    "crates/aether-gateway",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "LicenseRef-Aether-NonCommercial"
repository = "https://github.com/fawney19/Aether.git"

[workspace.dependencies]
aether-contracts = { path = "crates/aether-contracts" }
async-stream = "0.3"
base64 = "0.22"
bytes = "1"
flate2 = "1"
futures-util = "0.3"
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "http2"] }
rustls = { version = "0.23", features = ["ring"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7", features = ["codec", "io-util"] }
uuid = { version = "1", features = ["serde", "v4"] }
webpki-roots = "0.26"
url = "2"

[profile.release]
lto = true
strip = true
codegen-units = 1
