[package]
name = "aether-gateway"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust ingress gateway for Aether phase 3a transparent proxy"

[dependencies]
aether-billing.workspace = true
aether-cache.workspace = true
aether-contracts.workspace = true
aether-crypto.workspace = true
aether-data.workspace = true
aether-http.workspace = true
aether-model-fetch.workspace = true
aether-provider-transport.workspace = true
aether-scheduler-core.workspace = true
aether-runtime.workspace = true
aether-usage-runtime.workspace = true
aether-video-tasks-core.workspace = true
aether-wallet.workspace = true
async-stream.workspace = true
async-trait.workspace = true
axum = { version = "0.8", features = ["ws"] }
base64.workspace = true
bcrypt.workspace = true
bytes.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
clap = { version = "4", features = ["derive", "env"] }
dashmap = "6"
flate2.workspace = true
futures-util.workspace = true
hmac.workspace = true
http.workspace = true
ldap3 = "0.11"
parking_lot = "0.12"
regex.workspace = true
redis.workspace = true
reqwest.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "compression-gzip", "set-header"] }
tracing.workspace = true
url.workspace = true
uuid.workspace = true
webpki-roots.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
