[package]
name = "aether-ai-surfaces"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure AI API surface contracts, routing, adaptation, and finalize logic for Aether"

[dependencies]
aether-ai-formats.workspace = true
aether-contracts.workspace = true
base64.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1 = "0.10"
sha2.workspace = true
uuid.workspace = true
