[package]
name = "aether-model-fetch"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aether-contracts.workspace = true
aether-data.workspace = true
aether-provider-transport.workspace = true
aether-scheduler-core.workspace = true
async-trait.workspace = true
regex.workspace = true
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
