[package]
name = "aether-model-fetch"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aether-contracts.workspace = true
aether-data-contracts.workspace = true
aether-provider-transport.workspace = true
aether-scheduler-core.workspace = true
async-trait.workspace = true
base64.workspace = true
regex.workspace = true
rsa = "0.9.10"
serde_json.workspace = true
sha2 = { workspace = true, features = ["oid"] }
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
