[package]
name = "aether-pool-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Provider-independent pool scheduling and scoring primitives for Aether"

[dependencies]
aether-data-contracts.workspace = true
serde_json.workspace = true
