[package]
name = "aether-scheduler-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure scheduler health and quota logic extracted from aether-gateway"

[dependencies]
aether-contracts.workspace = true
aether-data.workspace = true
aether-wallet.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
