[package]
name = "aether-video-tasks-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aether-contracts.workspace = true
aether-data.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
uuid.workspace = true
